--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,16 +7,16 @@
             <a 
             href="#" 
             class="list-group-item clearfix" *ngFor="let recipe of recipes">
-                <div>
-                    <!-- <h4 class="list-group-item-heading">{{recipe.name}}</h4> -->
+                <div class="pull-left">
+                    <h4 class="list-group-item-heading">{{recipe.name}}</h4>
                     <p class="list-group-item-text">{{recipe.description}}</p>
                 </div>
-                <span>
+                <span class="pull-right">
                     <img 
                     [src]="recipe.imagePath" 
                     alt="{{recipe.name}}" 
                     class="img-responsive" 
-                    style="max-width: height 50px;">
+                    style="max-height:50px;">
                 </span>
             </a>
             <app-recipe-item></app-recipe-item>
