--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -5,9 +5,9 @@
         (recipeWasSelected)="selectedRecipe= $event"></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-details 
+        <app-recipe-detail
             *ngIf="selectedRecipe; else infoText"
-            [recipe]="selectedRecipe"></app-recipe-details>
+            [recipe]="selectedRecipe"></app-recipe-detail>
         <ng-template #infoText>
             <p>Please select a Recipe</p>
         </ng-template>
