--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -48,7 +48,8 @@
                    <div 
                    class="row"
                    *ngFor="let ingredientCtrl of controls; let i = index"
-                   [formGroupName]="i">
+                   [formGroupName]="i"
+                   style="margin: 10px;">
                     <div class="col-xs-8">
                         <input 
                         type="text"
@@ -65,6 +66,11 @@
                          <button class="btn btn-danger">X</button>
                      </div>
                    </div>
+                   <hr>
+                   <button
+                   type="button"
+                   class="btn btn-success"
+                   (click)="onAddIngredient()">Add Ingredient</button>
                 </div>
             </div>            
         </form>
